# PyTransIns

./: .gitignore  README.md  pyproject.toml
pytransins/: __init__.py  tokenizer.py  transins.py  utils.py
tests/: __init__.py  test_tokenizer.py  test_transins.py  test_utils.py
